@@ -253,7 +253,8 @@ void Preferences::reset() {
 
 	use_short_pathnames = false;
 
-	mplayer_version = -1; //None version parsed yet
+	mplayer_detected_version = -1; //None version parsed yet
+	mplayer_forced_version = -1;
 }
 
 void Preferences::save() {
@@ -458,7 +459,8 @@ void Preferences::save() {
 	set->endGroup();
 
 	set->beginGroup( "mplayer_info");
-	set->setValue("mplayer_version", mplayer_version);
+	set->setValue("mplayer_detected_version", mplayer_detected_version);
+	set->setValue("mplayer_forced_version", mplayer_forced_version);
 	set->endGroup();
 }
 
@@ -669,7 +671,8 @@ void Preferences::load() {
 	set->endGroup();
 
 	set->beginGroup( "mplayer_info");
-	mplayer_version = set->value("mplayer_version", mplayer_version).toInt();
+	mplayer_detected_version = set->value("mplayer_detected_version", mplayer_detected_version).toInt();
+	mplayer_forced_version = set->value("mplayer_forced_version", mplayer_forced_version).toInt();
 	set->endGroup();
 
 	/*
