@@ -1,5 +1,10 @@
 [b]Version 0.6.0rc1 (not released yet)[/b]:
 
+(2008-01-27)
+ * Now the user can tell smplayer what version of mplayer is using, with the
+   config option mplayer_forced_version. Anyway in the future there'll be
+   a dialog to configure this.
+
 (2008-01-26)
  * Now it's possible to zoom out on the video image.
  * Cosmetic change: now the mouse icon in Preferences->Interface->Seeking
